@@ -2,18 +2,21 @@ package com.usyd.catams.service.impl;
 
 import com.usyd.catams.dto.request.AuthenticationRequest;
 import com.usyd.catams.dto.request.UserCreateRequest;
+import com.usyd.catams.dto.request.UserUpdateRequest;
 import com.usyd.catams.dto.response.AuthResult;
 import com.usyd.catams.dto.response.UserResponse;
 import com.usyd.catams.entity.User;
 import com.usyd.catams.exception.AuthenticationException;
 import com.usyd.catams.exception.BusinessException;
+import com.usyd.catams.exception.BusinessRuleException;
 import com.usyd.catams.exception.ErrorCodes;
+import com.usyd.catams.exception.ResourceNotFoundException;
+import com.usyd.catams.enums.UserRole;
 import com.usyd.catams.repository.UserRepository;
 import com.usyd.catams.security.JwtTokenProvider;
 import com.usyd.catams.service.UserService;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -76,12 +79,7 @@ public class UserServiceImpl implements UserService {
         userRepository.save(user);
 
         // Create user response DTO
-        UserResponse userResponse = new UserResponse(
-            user.getId(),
-            user.getEmail(),
-            user.getName(),
-            user.getRole().name()
-        );
+        UserResponse userResponse = toResponse(user);
 
         // Generate JWT token
         String token = jwtTokenProvider.generateToken(
@@ -137,24 +135,108 @@ public class UserServiceImpl implements UserService {
         User savedUser = userRepository.save(user);
 
         // Create and return user response DTO
-        return new UserResponse(
-            savedUser.getId(),
-            savedUser.getEmail(),
-            savedUser.getName(),
-            savedUser.getRole().name()
-        );
+        return toResponse(savedUser);
     }
 
     @Override
     public List<UserResponse> getUsers() {
         return userRepository.findAll().stream()
             .sorted(Comparator.comparing(User::getName, String.CASE_INSENSITIVE_ORDER))
-            .map(user -> new UserResponse(
-                user.getId(),
-                user.getEmail(),
-                user.getName(),
-                user.getRole().name()
-            ))
-            .collect(Collectors.toList());
+            .map(this::toResponse)
+            .toList();
+    }
+
+    @Override
+    public List<UserResponse> searchUsers(String role, Boolean active) {
+        List<User> users;
+        try {
+            if (role != null && !role.isBlank()) {
+                UserRole r = UserRole.valueOf(role.trim().toUpperCase());
+                if (active != null) {
+                    users = userRepository.findByRoleAndIsActive(r, active);
+                } else {
+                    users = userRepository.findByRole(r);
+                }
+            } else {
+                users = userRepository.findAll();
+            }
+        } catch (IllegalArgumentException e) {
+            // Fallback to empty on invalid role
+            users = List.of();
+        }
+
+        if (active != null && (role == null || role.isBlank())) {
+            users = users.stream()
+                .filter(u -> Boolean.TRUE.equals(active) ? Boolean.TRUE.equals(u.getIsActive()) : Boolean.FALSE.equals(u.getIsActive()))
+                .toList();
+        }
+
+        return users.stream()
+            .sorted(Comparator.comparing(User::getName, String.CASE_INSENSITIVE_ORDER))
+            .map(this::toResponse)
+            .toList();
+    }
+
+    @Override
+    public UserResponse updateUser(Long userId, UserUpdateRequest request) {
+        Assert.notNull(userId, "User ID cannot be null");
+        Assert.notNull(request, "User update request cannot be null");
+
+        User user = userRepository.findById(userId)
+            .orElseThrow(() -> new ResourceNotFoundException("User", "id", String.valueOf(userId)));
+
+        if (request.getIsActive() != null) {
+            if (Boolean.FALSE.equals(request.getIsActive())
+                    && user.getRole() == UserRole.ADMIN
+                    && Boolean.TRUE.equals(user.getIsActive())) {
+                long otherActiveAdmins = userRepository.findByRoleAndIsActive(UserRole.ADMIN, true)
+                    .stream()
+                    .filter(activeAdmin -> !activeAdmin.getId().equals(userId))
+                    .count();
+
+                if (otherActiveAdmins == 0) {
+                    throw new BusinessRuleException("Cannot deactivate the last active administrator.", ErrorCodes.VALIDATION_FAILED);
+                }
+            }
+            user.setIsActive(request.getIsActive());
+        }
+
+        if (request.getFirstName() != null || request.getLastName() != null) {
+            String newFirst = request.getFirstName() != null
+                ? normalizeName(request.getFirstName(), "First name")
+                : user.getFirstName();
+            String newLast = request.getLastName() != null
+                ? normalizeName(request.getLastName(), "Last name")
+                : user.getLastName();
+
+            String combinedName = (newLast == null || newLast.isBlank())
+                ? newFirst
+                : newFirst + " " + newLast;
+            user.setName(combinedName);
+        }
+
+        User savedUser = userRepository.save(user);
+        return toResponse(savedUser);
+    }
+
+    private UserResponse toResponse(User user) {
+        if (user == null) {
+            return null;
+        }
+        return new UserResponse(
+            user.getId(),
+            user.getEmail(),
+            user.getName(),
+            user.getRole().name(),
+            user.getIsActive()
+        );
+    }
+
+    private String normalizeName(String value, String fieldName) {
+        String trimmed = value != null ? value.trim() : null;
+        if (trimmed == null || trimmed.isEmpty()) {
+            throw new IllegalArgumentException(fieldName + " cannot be blank");
+        }
+        return trimmed;
     }
 }
